k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
