k8s/code-execution-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: code-execution-service
  namespace: app-services
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: code-execution-service
  template:
    metadata:
      labels:
        app: code-execution-service
    spec:
      containers:
      # container 1 code-execution-service app (Docker client)
        - name: code-execution-service
          image: akashcapro/codex-code-execution-service-k8s:0.0.5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: docker-daemon
          image: docker:dind
          imagePullPolicy: IfNotPresent
          securityContext: 
            privileged: true
          args: ["--host=tcp://0.0.0.0:2375", "--storage-driver=overlay2"]
          volumeMounts: 
            - name: dind-storage
              mountPath: /var/lib/docker
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: dind-storage
          emptyDir: {}
