k8s/auth-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-user-service
  namespace: app-services
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: auth-user-service
  template:
    metadata:
      labels:
        app: auth-user-service
    spec:
      containers:
        - name: auth-user-service
          image: akashcapro/codex-auth-user-service:0.0.5
          imagePullPolicy: Always
          ports:
          - containerPort: 50051 
          - containerPort: 9101 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-user-service
  namespace: app-services
spec:
  selector:
    app: auth-user-service
  ports:
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: 50051
  - name: metrics
    protocol: TCP
    port: 9101
    targetPort: 9101
