k8s/code-manage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-manage-service
  namespace: app-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-manage-service
  template:
    metadata:
      labels:
        app: code-manage-service
    spec:
      containers:
        - name: code-manage-service
          image: akashcapro/codex-code-manage-service:0.0.5
          imagePullPolicy: Always
          ports:
          -  containerPort: 50053
          - containerPort: 9103
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: code-manage-service
  namespace: app-services
spec:
  selector:
    app: code-manage-service
  ports:
  - name: grpc
    protocol: TCP
    port: 50053
    targetPort: 50053
  - name: metrics
    protocol: TCP
    port: 9103
    targetPort: 9103
