k8s/collab-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-service
  namespace: app-services
spec:
  replicas: 1
  selector: 
    matchLabels:
      app : collab-service
  template:
    metadata:
      labels:
        app: collab-service
    spec:
      containers:
        - name: collab-service
          image: akashcapro/codex-collab-service:0.0.5
          imagePullPolicy: Always
          ports: 
            - containerPort: 50054
            - containerPort: 5001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata: 
  name: collab-service
  namespace: app-services
spec:
  selector:
    app: collab-service
  ports:
  - name: http
    protocol: TCP
    port: 5001
    targetPort: 5001
  - name: grpc
    protocol: TCP
    port: 50054
    targetPort: 50054
