k8s/problem-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problem-service
  namespace: app-services
spec: 
  replicas: 1
  selector:
    matchLabels:
        app: problem-service
  template:
    metadata:
      labels:
        app: problem-service
    spec:
      containers:
      - name: problem-service
        image: akashcapro/codex-problem-service:0.0.6
        imagePullPolicy: Always
        ports:
        - containerPort: 50052
        - containerPort: 9102
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: problem-service
  namespace: app-services
spec:
  selector:
    app: problem-service
  ports:
  - name: grpc
    protocol: TCP
    port: 50052
    targetPort: 50052
  - name: metrics
    protocol: TCP
    port: 9102
    targetPort: 9102
